Revision history for {{$dist->name}}

{{$NEXT}}

4.300023  2012-09-06 09:01:12 America/New_York
          do not use ">" in a filename; fixes the build on Win32 (thanks,
          djgoku!)

4.300022  2012-09-05 08:35:27 America/New_York
          do not detect an escaped "\$VERSION =" as an assignment to a variable
          (this is sort of a half-measure)

          'dzil run' also edits $PATH to include ExecDir directories (Karen
          Etheridge)

4.300021  2012-07-31 23:20:50 America/New_York
          plugins can now provide a MANIFEST.SKIP that can be processed by
          ManifestSkip. Previously generated content was just ignored.
          (thanks, Olivier Mengué!)

          GenerateFile can now also template its filename, with the
          name_is_template option (Thanks, Karen Etheridge!)

4.300020  2012-06-21 11:17:40 America/New_York
          properly set the working directory when testing (thanks, Jesse
          Luehrs!)

4.300019  2012-06-20 15:36:01 America/New_York
          avoid looking outside the dist during testing (thanks, Jesse Luehrs!)

4.300018  2012-06-07 22:25:03 America/New_York
          format codes %E, %T, %U, & %V added to NextRelease (thanks,
          Karen Etheridge & Christopher J. Madsen!)

4.300017  2012-05-31 12:17:45 America/New_York
          also check plugin version requirements in dzil authordeps --missing
          (Karen Etheridge)

          add 'dzil add' to add new modules to an existing dist (thanks, David
          Golden!)

          misc. bugfixes (thanks, Karen Etheridge and Olivier Mengué!)

4.300016  2012-05-04 22:09:10 America/New_York
          make AutoPrereqs treat .psgi files as scannable (thanks, Jakob Voss!)

          add yet more links in plugins documentation to help discoverability
          of other plugins.  (thanks, Olivier Mengué!)

          AutoPrereqs: skip author and release tests when scanning (RT#76305).
          (thanks, Olivier Mengué!)
